--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:web": "cd web && npm start",
+    "build:web": "cd web && npm run build",
+    "build:h": "node scripts/gen.js",
+    "build": "npm run build:web && npm run build:h"
   },
   "author": "",
   "license": "ISC",
